--- a/client/src/styles/index.css
+++ b/client/src/styles/index.css
@@ -134,13 +134,15 @@ main {
 /* Mobile Section Adjustments */
 @media (max-width: 768px) {
   .section {
-    padding: 60px 0;
+    padding-top: 100px;
+    padding-bottom: 60px;
   }
 }
 
 @media (max-width: 480px) {
   .section {
-    padding: 50px 0;
+    padding-top: 100px;
+    padding-bottom: 50px;
   }
 }
 
